--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,45 @@
 @import '~bootstrap/scss/bootstrap';
+
+// HEADER STYLES
+header {
+
+    .logo {
+        width: 65px;
+        vertical-align: middle;
+    }
+
+    .header-list-container {
+        vertical-align: middle;
+
+        // RIGHT SIDE HEADER LIST
+        ul {
+            list-style-type: none;
+            display: flex;
+            margin-bottom: 0px;
+
+            li {
+                padding: 18px;
+                border: 3px solid transparent;
+
+                &.active,
+                &:hover {
+                    border-bottom: 3px solid #0282F9;
+
+                }
+
+                a {
+                    color: #1C1C1C;
+                    text-decoration: none;
+
+                    &.active,
+                    &:hover {
+                        color: #0282F9;
+
+                    }
+
+                }
+            }
+
+        }
+    }
+}
