[UPDATE] Footer done

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -43,3 +43,103 @@ header {
         }
     }
 }
+
+
+// FOOTER STYLES
+footer {
+    position: relative;
+
+    .footer-bg {
+        background-image: url(/resources/img/footer-bg.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .logo {
+        position: absolute;
+        top: -45px;
+        width: 650px;
+    }
+
+    // TOP FOOTER STYLES
+    .top-footer {
+        display: flex;
+        flex-wrap: wrap;
+
+        h3 {
+            font-weight: bold;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0px 20px;
+            margin: 0px 15px;
+            color: white;
+
+            li {
+
+                a {
+                    text-decoration: none;
+                    color: white;
+                    font-size: 14px;
+                    font-weight: lighter;
+
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
+    }
+
+    // BOTTOM FOOTER STYLES
+    .bottom-footer {
+        padding: 35px 0px;
+        position: relative;
+        z-index: 999;
+        background-color: #303030;
+        display: flex;
+        align-items: center;
+
+        span {
+            color: #0282F9;
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        ul {
+            list-style-type: none;
+            display: flex;
+            margin-bottom: 0px;
+
+            li {
+                padding: 7px;
+                margin: 5px;
+                cursor: pointer;
+                border: 1px solid transparent;
+                border-radius: 50%;
+                transition: all 0.5s;
+
+                &:hover {
+                    border: 1px solid #0282F9;
+                    border-radius: 50%;
+                }
+            }
+        }
+
+        .sign-up-button {
+            color: white;
+            font-weight: bold;
+            font-size: 20px;
+            text-decoration: none;
+            padding: 7px 12px;
+            border: 3px solid #0282F9;
+            transition: 0.5s;
+
+            &:hover {
+                border-radius: 20px;
+            }
+        }
+    }
+
+}
