--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,11 @@
 @import '~bootstrap/scss/bootstrap';
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 // HEADER STYLES
 header {
 
@@ -44,6 +50,49 @@ header {
     }
 }
 
+.my-bg-blue {
+    background-color: #0282F9;
+}
+
+// BANNER STYLES
+.banner-container {
+
+    background-color: #0282F9;
+    padding: 70px 0px;
+
+    h5 {
+        font-size: 15px;
+        color: white;
+        padding: 0px 15px;
+    }
+
+    img {
+
+        width: 50px;
+        height: 60px
+    }
+}
+
+// MAIN JUMBOTRON
+.default-badge-bg {
+    color: white;
+    font-weight: bold;
+    padding: 12px 50px;
+    font-size: 23px;
+    background-color: #0282F9;
+    position: absolute;
+    bottom: -25px;
+    left: 300px;
+}
+
+.jumbo-container {
+    position: relative;
+    height: 450px;
+    background-size: cover;
+    background-image: url(/resources/img/jumbotron.jpg);
+
+
+}
 
 // FOOTER STYLES
 footer {
