--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,10 +1,15 @@
 @import '~bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 400;
 }
+
 
 // HEADER STYLES
 header {
@@ -66,6 +71,7 @@ header {
     }
 }
 
+// MAIN STYLES
 main {
     h3 {
         color: white;
@@ -156,6 +162,108 @@ main {
 
     }
 }
+
+// SINGLE COMIC STYLES
+
+.my-light-green {
+    color: #92DB6D;
+}
+
+.blue-jumbo-bar {
+    background-color: #0282F9;
+    height: 60px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+
+}
+
+.my-bg-grey {
+    background-color: #F6F6F6;
+}
+
+.my-border-black-r {
+    border-right: 1px solid #357739;
+}
+
+.ml-2 {
+    margin-left: 20px;
+}
+
+.pl-0 {
+    padding-left: 0px;
+}
+
+.pr-0 {
+    padding-right: 0px;
+}
+
+.detail-img-container {
+    img {
+        width: 200px;
+        position: absolute;
+        bottom: 20px;
+        left: 470px;
+
+    }
+}
+
+.comic-info-container {
+
+    h1 {
+        font-size: 35px;
+        color: #193C50;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+
+    p {
+        color: #777777;
+    }
+
+
+    .stock-price-container {
+        font-size: 14px;
+        margin-top: 30px;
+        background-color: #55BA59;
+        border-bottom: 1px solid #357739;
+    }
+}
+
+.table-container {
+    h5 {
+        font-size: 23px;
+        color: #193C50;
+        font-weight: 600;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #a1a1a1;
+    }
+
+    table {
+
+        font-size: 14px;
+        width: 100%;
+
+        .td-index {
+            color: #193C50;
+            padding-bottom: 20px;
+        }
+
+        tr {
+            border-bottom: 1px solid #a1a1a1;
+
+            td {
+                padding: 20px 0px 20px 0px;
+
+                a {
+                    text-decoration: none;
+                    color: #0282F9;
+                }
+            }
+        }
+    }
+}
+
 
 // MAIN JUMBOTRON
 .default-badge-bg {
@@ -283,4 +391,10 @@ footer {
 
 .my-bg-black {
     background-color: #1C1C1C
+}
+
+.my-container-lg {
+
+    max-width: 960px;
+    margin: auto;
 }
